--- a/projeto-site/public/css/style.css
+++ b/projeto-site/public/css/style.css
@@ -540,6 +540,7 @@ justify-content: center;
     justify-content: space-between;
     align-items: center;
     border-top: 3px solid #e74c3c;
+    margin-bottom: 80px;
 }
 
 .rodape h5{
