--- a/projeto-site/public/css/style.css
+++ b/projeto-site/public/css/style.css
@@ -614,6 +614,7 @@ justify-content: center;
     margin-top: 10vh;
     border-radius: 10px;
     text-align: center;
+    margin-bottom: 10vh;
   }
   
   /* formulário */
